waybar: fix spacing

--- a/private_dot_config/waybar/style.css
+++ b/private_dot_config/waybar/style.css
@@ -71,7 +71,7 @@ tooltip label {
 }
 
 .modules-right {
-  margin-right: 5px;
+  margin-right: 10px;
 }
 
 .modules-left {
